bugfix(Card): row spacing and title above image variants
Tweak some small styles and have a version of cards where the title is above the image

--- a/packages/styles/scss/components/_cardgroup.scss
+++ b/packages/styles/scss/components/_cardgroup.scss
@@ -10,6 +10,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin: auto;
+    row-gap: px-to-rem(32px);
 
     .right-to-left & {
       flex-direction: row-reverse;
@@ -47,7 +48,7 @@
   &--button-wrap {
     display: flex;
     justify-content: center;
-    margin-top: 64px;
+    margin-top: px-to-rem(64px);
     width: 100%;
   }
 }
