--- a/packages/styles/scss/components/_hero.scss
+++ b/packages/styles/scss/components/_hero.scss
@@ -111,6 +111,7 @@
       .ilo--image {
         height: 100%;
         max-height: 592px;
+        overflow: hidden;
         width: 100%;
       }
 
